# netflix-simulator

./: README.md  pyproject.toml  settings.py
