[tool.poetry]
name = "netflix-simulator"
version = "0.1.0"
description = ""
authors = ["Krzysztof Adamski <krzysadam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-rest-framework = "^0.1.0"
swagger-spec-validator = "^2.4"
psycopg2-binary = "^2.8"
django-enumfields = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
